--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 		<meta name="viewport" content="width=device=width, initial-scale=1.0">
 		<meta http-equipv="X-UA-Compatible" content="ie=edge">
 		<title>INFO2180 Lab 2</title>
+		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 	<body>
 		<h1>INFO2180 Lab 2</h1>
 		 <p>This is a webpage for Lab 2 of INFO2180.</p>
+		<img src="lab2.jpg" alt="webdev">
 	</body>
 </html>
 
